fix: fix loader overlapping

--- a/src/components/global-modal/ui/global-modal.module.scss
+++ b/src/components/global-modal/ui/global-modal.module.scss
@@ -4,7 +4,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 1000;
+    z-index: 900;
     background-color: rgba(121, 156, 212, 0.5);
     backdrop-filter: blur(5px);
     display: flex;
